--- a/index.html
+++ b/index.html
@@ -4,13 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Dog API Example</title>
+    <link rel="shortcut icon" href="">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Dog API: A Simple Example</h1>
+
+        <form>
+          <input type="submit" value="Get a dog pic!">
+        </form>
+        <section class="results hidden">
+          <h2>Look at this dog!</h2>
+        </section>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+</body>
+</html>
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Random Dog Images</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class='container'>
         <h1>Random Dog Images</h1>
-
         <form>
             <input type="submit" value='Click here for 3 random dog pics!'>
         </form>
@@ -22,4 +48,4 @@
     <script src='https://code.jquery.com/jquery-3.3.1.js'></script>
     <script src='script.js'></script>
 </body>
-</html>
+</html> -->
