--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <h1>Dog API: A Simple Example</h1>
 
         <form>
-          <input type="submit" value="Get a dog pic!">
+            <input type="text" class='number' placeholder='1-50'>
+            <input type="submit" value="Get a dog pic!">
         </form>
         <section class="results hidden">
           <h2>Look at this dog!</h2>
